--- a/mobile/Second/Second/Second/SecondPage.xaml
+++ b/mobile/Second/Second/Second/SecondPage.xaml
@@ -6,12 +6,13 @@
 
     
     <StackLayout>
-    <Image x:Name="ImgLogo2" WidthRequest="84" HeightRequest="75" TranslationX="0" TranslationY="110"/>
-    <Image x:Name="ImgLogo1" WidthRequest="297" HeightRequest="75" TranslationX="0" TranslationY="110"/>
+        <Image Source="Logo2" WidthRequest="84" HeightRequest="75" TranslationX="0" TranslationY="110"/>
+    <Image Source="Logo1" WidthRequest="297" HeightRequest="75" TranslationX="0" TranslationY="95" />
         
-    <Button Text="Log in" TextTransform="None" TextColor="White" BackgroundColor="Transparent" BorderColor="White" BorderWidth="1" CornerRadius="15" Clicked ="NavigateButton_OnClicked" TranslationY="300"
+    <Button Text="Log in" TextTransform="None" TextColor="White" BackgroundColor="Transparent" BorderColor="White" BorderWidth="1"
+            CornerRadius="15" Clicked ="NavigateButton_OnClicked" TranslationY="350"
            HorizontalOptions="Center" WidthRequest="284" />
-    <Label Text="Version: 1.16" TextTransform="None" VerticalOptions="End" TextColor ="White" HorizontalOptions="Center" TranslationY="550"></Label>
+    <Label FontAttributes="Bold" Text="Version: 1.16" TextTransform="None" VerticalOptions="End" TextColor ="White" HorizontalOptions="Center" TranslationY="550"></Label>
     </StackLayout>
 
 </ContentPage>
